--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -27,9 +27,9 @@
                         <div class="form-group">
                             <select class="form-control custom-form-control" ng-model="accountDetails.type">
                                 <option value="" selected>Type*</option>
-                                <option>Truck Owner</option>
+                                <option>TruckOwner</option>
                                 <option>Manufacturer</option>
-                                <option>Commission Agent</option>
+                                <option>CommissionAgent</option>
                                 <option>Transporter</option>
                                 <option>GPS</option>
                             </select>
@@ -281,7 +281,7 @@
 
         <div class="col-xs-12 save-btns">
             <a href="#" class="btn btn-danger" ui-sref="services.gpsAccounts">Cancel</a>
-            <a href="#" class="btn btn-primary" ng-click="addAccount()">Submit</a>
+            <a href="#" class="btn btn-primary" ng-click="addOrUpdateAccount()">Submit</a>
 
         </div>
     </div>
