--- a/client/views/partials/admin/settings/settings.html
+++ b/client/views/partials/admin/settings/settings.html
@@ -1,11 +1,11 @@
 <div class="col-xs-12 cus-main" ng-controller="settingsCtrl">
     <ul class="list-inline custom-ul">
         <li ui-sref-active="activated"><a href="#" ui-sref="settings.gpsSettings">GPS</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="settings.erp">ERP</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="settings.erpSettings">ERP</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="settings.orderStatus">Order Status</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="settings.truckTypes">Truck Types</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="settings.loadTypes">Load Types</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="settings.goodsTypes">Goods Types</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="settings.goodsType">Goods Types</a></li>
         <!-- <li class="col-xs-3 pull-right">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search">
