--- a/client/views/partials/admin/settings/erpSettings.html
+++ b/client/views/partials/admin/settings/erpSettings.html
@@ -1,6 +1,6 @@
-<div ng-controller="settingsCtrl" ng-init="getGpsPlanCount('gps')">
+<div ng-controller="settingsCtrl" ng-init="getErpPlanCount('erp');">
     <div>
-        <p class="pull-left name-head">GPS Renewal Plans</p>
+        <p class="pull-left name-head">ERP Renewal Plans</p>
         <div class="row mt-20">
             <div class="col-sm-7 pull-right pall-zero">
                 <div class="col-sm-5">
@@ -29,28 +29,23 @@
             <td><input type="checkbox"/></td>
             <td data-title="'S No'">{{$index+1}}</td>
             <td data-title="'Plan Name'" sortable="'planName'" class="clickable-item">{{plan.planName}}</td>
-            <td data-title="'Duration in Months'" sortable="'durationInMonths'" class="clickable-item">
-                {{plan.durationInMonths}}
+            <td data-title="'Duration'" sortable="'durationInMonths'" class="clickable-item">{{plan.durationInMonths}}
             </td>
             <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{plan.amount}}</td>
             <td data-title="'Status'" sortable="'status'" class="clickable-item">{{plan.status}}</td>
-            <td data-title="'Action'" class="clickable-item">
-                <a href="#" ng-click="editPlanPopup(plan._id)" class="edit_icon">
+            <td data-title="'Action'">
+                <a href="#" class="edit_icon" ng-click="editPlanPopup(plan._id)">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
-                <a href="#" ng-click="delGpsPlan(plan._id, plan.plan)" class="delete_icon">
-                    <span class="glyphicon glyphicon-trash  "></span>
+                <a href="#" ng-click="delGpsPlan(plan._id)" class="delete_icon">
+                    <span class="glyphicon glyphicon-trash"></span>
                 </a></td>
-
-        </tr>
-        <tr ng-if="!currentPageOfgpsPlans || currentPageOfgpsPlans.length === 0">
-            <td colspan="8">No GPS Plans exist.</td>
         </tr>
     </table>
     <script type="text/ng-template" id="addNewGPSandERP.html">
         <div ng-init="initGPSandERPPlan();">
             <div class="modal-header">
-                <h3 class="modal-title" id="modal-title">New Renewal Plans</h3>
+                <h3 class="modal-title" id="modal-title">New ERP Renewal Plans</h3>
                 <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
             </div>
             <div class="modal-body" id="modal-body">
@@ -73,7 +68,6 @@
                                    placeholder="Duration in Months *"/>
                         </div>
                     </div>
-
                     <div class="col-sm-6">
                         <div class="form-group">
                             <p class="smsenabled">Status</p>
@@ -102,7 +96,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 text-center">
-                        <input type="button" class="btn btn-primary" value="Submit" ng-click="addGPSPlan('gps')"/>
+                        <input type="button" class="btn btn-primary" value="Submit" ng-click="addGPSPlan('erp')"/>
                     </div>
                 </div>
             </div>
