--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -13,6 +13,7 @@
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
     <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
