--- a/client/css/adminStyles.css
+++ b/client/css/adminStyles.css
@@ -439,9 +439,16 @@ footer {
 
 .select2 > .select2-choice.ui-select-match {
     /* Because of the inclusion of Bootstrap */
-    height: 29px;
+    height: 34px;
+    width: 85% !important;
 }
-
+.ui-select-choices-row:hover{
+    background-color: #e83b13 !important;
+    color: #fff !important;
+}
+.select2-container .select2-choice > .select2-chosen{
+    padding: 4px !important;
+}
 .selectize-control > .selectize-dropdown {
     top: 36px;
 }
