--- a/client/views/partials/admin/settings/truckTypes.html
+++ b/client/views/partials/admin/settings/truckTypes.html
@@ -23,7 +23,8 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center" ng-table="truckTypeParams">
+    <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center"
+           ng-table="truckTypeParams">
         <tr ng-repeat="plan in currentPageOftruckTypes">
             <td><input type="checkbox"/></td>
             <td data-title="'S No'">{{$index+1}}</td>
@@ -38,7 +39,11 @@
                 </a>
                 <a href="#" class="delete_icon" ng-click="delTruckType(plan._id)">
                     <span class="glyphicon glyphicon-trash"></span>
-                </a></td>
+                </a>
+            </td>
+        </tr>
+        <tr ng-if="!currentPageOftruckTypes || currentPageOftruckTypes.length === 0">
+            <td colspan="8">No Truck Types exist.</td>
         </tr>
     </table>
     <script type="text/ng-template" id="addNewTruckType.html">
