--- a/client/views/partials/admin/settings/gpsSettings.html
+++ b/client/views/partials/admin/settings/gpsSettings.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <input type="checkbox" ng-change="checkAll()" ng-model="checkAllStatus" checked="checked" />
+       <input type="checkbox" class="btn btn-warning" va ng-change="checkAll()" ng-model="checkAllStatus" />
     <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center"
            ng-table="settingParams" >
 
