--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -78,6 +78,7 @@
 </footer>
 
 <!--bower scripts-->
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyCYmF9BGm2aYV6c27J5GXdtQYWYLUZehks&libraries=places"></script>
 <script src="components/jquery/dist/jquery.min.js"></script>
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="components/angular/angular.min.js"></script>
