--- a/client/views/index.html
+++ b/client/views/index.html
@@ -104,7 +104,7 @@
 
 <!--bower scripts-->
 <script src="dist/components/components.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <!--app-->
 <!--<script src="js/app.js"></script>-->
