--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -12,7 +12,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
                             <input type="text" class="form-control custom-form-control" placeholder="Username*"
-                                   ng-model="accountDetails.userName"/>
+                                   ng-model="accountDetails.userName" ng-change="checkAvailablity()"/>
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control custom-form-control" placeholder="Full Name*"
@@ -109,7 +109,7 @@
                                 <li>
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox" value="" ng-model="accountDetails.loadEnabled">
+                                            <input type="checkbox" value="" ng-model="accountDetails.loadEnabled" disabled>
                                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                                             LOAD
                                         </label>
@@ -128,7 +128,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="sms" value="true" ng-model="accountDetails.smsEnabled">
+                                            <input type="radio" name="sms" ng-value="true" ng-model="accountDetails.smsEnabled">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Enable
                                         </label>
@@ -137,7 +137,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="sms" value="false" ng-model="accountDetails.smsEnabled">
+                                            <input type="radio" name="sms" ng-value="false" ng-model="accountDetails.smsEnabled">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Disable
                                         </label>
@@ -151,7 +151,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="active" value="true" ng-model="accountDetails.isActive">
+                                            <input type="radio" name="active" ng-value="true" ng-model="accountDetails.isActive">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Enable
                                         </label>
@@ -160,7 +160,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="active" value="false" ng-model="accountDetails.isActive">
+                                            <input type="radio" name="active" ng-value="false" ng-model="accountDetails.isActive">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Disable
                                         </label>
@@ -173,22 +173,22 @@
                     <div class="col-xs-12 col-sm-6 account-rotues">
                         <div class="row">
                             <p>Operating Routes</p>
-                            <!--<span><i class="fa fa-plus-square" aria-hidden="true" ng-show="accountDetails.operatingRoutes.length"></i></span>-->
+                            <a href="#" ng-click="addRoute()"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
                             <!--<span><i class="fa fa-plus-minus" aria-hidden="true" ng-show="accountDetails.operatingRoutes.length"></i></span>-->
                         </div>
                         <div class="clearfix"></div>
-                        <div ng-repeat="route in accountDetails.operatingRoutes">
+                        <div ng-repeat="route in operatingRoutes">
                             <div class="form-group col-xs-5">
-                                <input type="text" class="form-control" placeholder="Source" ng-model="route.source"/>
+                                <input id="{{$index}}s" type="text" class="form-control" placeholder="Source" ng-model="route.sourceAddress" ng-change="getLonLat($index, 'source')"/>
                             </div>
                             <div class="form-group col-xs-5">
-                                <input type="text" class="form-control" placeholder="Destination" ng-model="route.destination"/>
+                                <input id="{{$index}}d" type="text" class="form-control" placeholder="Destination" ng-model="route.destinationAddress" ng-change="getLonLat($index, 'destination')"/>
                             </div>
+                            <!--<div class="form-group col-xs-1">-->
+                                <!--<a href="#" ng-click="addRoute()"><i class="fa fa-plus-square" aria-hidden="true" ng-show="$index === accountDetails.operatingRoutes.length-1"></i></a>-->
+                            <!--</div>-->
                             <div class="form-group col-xs-1">
-                                <a href="#" ng-click="addRoute()"><i class="fa fa-plus-square" aria-hidden="true" ng-show="$index === accountDetails.operatingRoutes.length-1"></i></a>
-                            </div>
-                            <div class="form-group col-xs-1">
-                                <a href="#" ng-click="deleteRoute($index)"><i class="fa fa-minus-square" aria-hidden="true" ng-show="accountDetails.operatingRoutes.length > 1"></i></a>
+                                <a href="#" ng-click="deleteRoute($index)"><i class="fa fa-minus-square" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
